--- a/CacelApp/Views/Modulos/Login/Login.xaml
+++ b/CacelApp/Views/Modulos/Login/Login.xaml
@@ -10,48 +10,66 @@
         WindowStartupLocation="CenterScreen"
         ResizeMode="NoResize"
         TextElement.FontFamily="{DynamicResource MaterialDesignFont}">
-    
+
     <d:DesignData.DataContext>
         <local:LoginViewModel/>
     </d:DesignData.DataContext>
 
-    <materialDesign:Card Margin="30" UniformCornerRadius="8">
-        <Grid>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*"/>
-                <ColumnDefinition Width="3*"/>
-            </Grid.ColumnDefinitions>
+    <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="3*"/>
+        </Grid.ColumnDefinitions>
 
-            <StackPanel Grid.Column="0" Background="{DynamicResource PrimaryHueLightBrush}"
-                        VerticalAlignment="Center" Margin="20">
-                <Image Source="/Views/Modulos/Login/logo.png" Height="140"/>
-                <TextBlock Text="BALANZA" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" Foreground="White" Margin="0,5,0,20"/>
-                <TextBlock Text="Tu negocio con respaldo, precisión y confianza" 
-                           Foreground="White" TextWrapping="Wrap"
-                           TextAlignment="Center" Opacity="0.8"/>
-            </StackPanel>
+        <StackPanel Grid.Column="0" 
+                    VerticalAlignment="Center" Margin="20"
+                    Background="White">
+            <Image Source="/Assets/Image/logo.png" Height="140"/>
+            <Grid Height="2" Width="250" Margin="0,0,0,30">
+                <Rectangle Fill="#E53935" />
+            </Grid>
+            <TextBlock Text="Tu negocio con respaldo, precisión y confianza" 
+                       Foreground="Black" TextWrapping="Wrap"   
+                       TextAlignment="Center" FontSize="20"/>
+        </StackPanel>
 
-            <StackPanel Grid.Column="1" Margin="30" VerticalAlignment="Center">
-                <TextBlock Text="Bienvenido" FontSize="28" FontWeight="Light" Margin="0,0,0,10"/>
-                <TextBlock Text="Inicia sesión para continuar" FontSize="14" Opacity="0.6" Margin="0,0,0,30"/>
+        <Grid Grid.Column="1" Background="#1C242A">
+
+            <StackPanel Margin="30" HorizontalAlignment="Stretch" VerticalAlignment="Center">
+
+                <TextBlock Text="Bienvenido" FontSize="28" FontWeight="Bold" Margin="0,0,0,5"
+                           Foreground="White"/>
+
+                <TextBlock Text="Inicia sesión para continuar" FontSize="14" Opacity="0.8" Margin="0,0,0,30"
+                           Foreground="White"/>
 
                 <TextBox materialDesign:HintAssist.Hint="Usuario"
                          Style="{StaticResource MaterialDesignFloatingHintTextBox}"
                          Text="{Binding Usuario, UpdateSourceTrigger=PropertyChanged}"
+                         Foreground="White"
+                       
                          Margin="0,0,0,10"/>
 
                 <PasswordBox materialDesign:HintAssist.Hint="Contraseña"
                              Style="{StaticResource MaterialDesignFloatingHintPasswordBox}"
+                             Foreground="White"
+                     
                              Margin="0,0,0,30"/>
+
                 <Button Content="INGRESAR"
                         Command="{Binding IngresarCommand}"
                         IsEnabled="{Binding IsNotBusy}"
+                        Foreground="White"
                         Style="{StaticResource MaterialDesignRaisedButton}"
                         Margin="0,10,0,0"/>
 
                 <ProgressBar IsIndeterminate="{Binding IsBusy}" Height="4" Margin="0,15,0,0"
-                             Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}"/>
+                             Visibility="{Binding IsBusy, Converter={StaticResource BooleanToVisibilityConverter}}"
+                             Foreground="#E53935"/>
+
+                <TextBlock Text="Version 1.0.0" HorizontalAlignment="Center" Margin="0,40,0,0"
+                           FontSize="10"  Foreground="White" />
             </StackPanel>
         </Grid>
-    </materialDesign:Card>
+    </Grid>
 </Window>
