refactor(mvvm): renombra ViewModels a Models y estructura vistas
Este commit refactoriza la estructura MVVM de la aplicación para estandarizar la nomenclatura y mejorar la organización de los módulos, preparando la base para futuras adiciones.

- Renombradas las clases *ViewModel a *Model (p.ej., LoginViewModel a LoginModel, MainWindowViewModel a MainWindowModel).
- Actualizadas todas las referencias en vistas XAML, code-behind y configuración de inyección de dependencias.
- Movidos los namespaces de módulos como 'Login' de 'CacelApp.Modulos.*' a 'CacelApp.Views.Modulos.*'.
- Registrado el nuevo módulo 'Dashboard' y su 'DashboardModel' en la inyección de dependencias.
- Cambiado el tema base de la aplicación de 'Dark' a 'Light' en 'App.xaml'.
- Añadido el conversor 'BoolToGreenRedConverter' en los recursos de la aplicación.

--- a/CacelApp/App.xaml
+++ b/CacelApp/App.xaml
@@ -8,13 +8,14 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
 
-                <materialDesign:BundledTheme BaseTheme="Dark" PrimaryColor="Red" SecondaryColor="Lime" />
+                <materialDesign:BundledTheme BaseTheme="Light" PrimaryColor="Red" SecondaryColor="Lime" />
                 <ResourceDictionary Source="pack://application:,,,/MaterialDesignThemes.Wpf;component/Themes/MaterialDesign3.Defaults.xaml" />
 
             </ResourceDictionary.MergedDictionaries>
 
             <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
             <converters:InverseBooleanToVisibilityConverter x:Key="InverseBooleanToVisibilityConverter" />
+            <converters:BoolToGreenRedConverter x:Key="BoolToGreenRedConverter" />
         </ResourceDictionary>
     </Application.Resources>
 </Application>
